# platform-dev-blueprint

./: .gitignore  CLAUDE.md  OPEN-ITEMS-2026-06-17.md  PROJECT.md  README.md
.claude-plugin/: plugin.json
chat-context/: ARCHIVE.md  REGISTRY.md  STARTER.md  TECH-DEBT.md  WORKLIST.md
chat-context/handover/: README.md
chat-context/sprints/: sprint-01-script-runner-build.md
chat-context/templates/: TEMPLATE-finding.md  TEMPLATE-handover.md  TEMPLATE-sprint.md  TEMPLATE-starter.md  TEMPLATE-task.md
docs/: PLUGIN-INSTALL.md  TOOLING.md  WORKING_CONCEPT.md
scripts/: README.md  buildhealth.sh.example  closure.py  closure.sh  gitstatus.sh  qs_test.sh  update-git.sh
scripts/mcp-server/: .gitignore  DESIGN.md  README.md  pyproject.toml
scripts/mcp-server/script_runner/: __init__.py  __main__.py  discovery.py  exec.py  schema.py  server.py
scripts/mcp-server/tests/: test_smoke.py
scripts/tests/: test_closure.py
scripts/tests/fixtures/chat-context/: ARCHIVE.md  REGISTRY.md  STARTER.md  WORKLIST.md
scripts/tests/fixtures/chat-context/handover/: dispatch-2026-07-18-test-slug.md  handover-2026-07-18-test-slug.md
scripts/tests/fixtures/chat-context/sprints/: sprint-90-old-record.md
scripts/tests/fixtures/chat-context/templates/: TEMPLATE-starter.md
skills/adr-author/: SKILL.md
skills/code-handover/: SKILL.md
skills/fs-write/: SKILL.md
skills/session-closure/: SKILL.md
skills/session-start/: SKILL.md
skills/solve-problem/: SKILL.md
skills/worklist-manager/: SKILL.md
